--- a/_layouts/note.html
+++ b/_layouts/note.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<note class="note">
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
@@ -10,4 +10,4 @@ layout: default
   </div>
 
   {% include disqus.html %}
-</article>
+</note>
